# hr_screening_bot_python

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manual_chat.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/core/: config.py  prompt_loader.py
app/data/: default_vacancies.py  vacancies.json
app/llm/: base.py  deepseek.py  stub.py
app/models/: message.py  screening.py  vacancy.py
app/repositories/: history.py  vacancy.py
app/scheduler/: calendar.py
app/services/: processor.py
docs/: openapi.yaml
prompts/: system_prompt.md
tests/: test_api.py  test_deepseek_client.py  test_history_repository.py  test_processor.py  test_prompt_loader.py  test_vacancy_repository.py
