[project]
name = "hr-screening-bot"
version = "1.0.0"
description = "HR bot for primary candidate screening with DeepSeek POST integration"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
